@@ -68,3 +68,4 @@ extern void cselib_process_insn		PARAMS ((rtx));
 extern int rtx_equal_for_cselib_p	PARAMS ((rtx, rtx));
 extern int references_value_p		PARAMS ((rtx, int));
 extern rtx cselib_subst_to_values	PARAMS ((rtx));
+extern void cselib_invalidate_rtx	PARAMS ((rtx));
