@@ -1,4 +1,13 @@
-2003-08-29  Jonathan Wakely  <redi@gcc.gnu.org>
+2004-09-13  Richard Henderson  <rth@redhat.com>
+
+        PR inline-asm/6806
+        * cselib.c (cselib_invalidate_rtx): Export.  Remove unused args.
+        (cselib_invalidate_rtx_note_stores): New.
+        (cselib_record_sets, cselib_process_insn): Update to match.
+        * cselib.h (cselib_invalidate_rtx): Declare.
+        * reload1.c (reload_cse_simplify): Invalidate asm clobbers.
+
+2004-08-29  Jonathan Wakely  <redi@gcc.gnu.org>
 
 	* doc/trouble.texi (C++ misunderstandings): Fix example code.
 
